--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -12,7 +12,8 @@
 }
 
 .Logo {
-  height: 100%;
+  margin: $spaceS;
+  height: 85%;
   max-width: 100vw;
   object-fit: cover;
   object-position: center;
