creates features section, adds active class to menu, small style tweaks

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -15,6 +15,8 @@ $secondaryLL: #ffe8d7;
 $secondaryD: #d99159;
 $secondaryDD: #b86b31;
 
+$eggshell: lighten(#f0ead6, 8%);
+
 $gray1: hsl(24, 20%, 95%); //Interface Grays
 $gray2: hsl(24, 21%, 93%);
 $gray3: hsl(24, 9%, 82%);
