--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -16,9 +16,9 @@
 }
 
 .Home {
-  min-height: 84vh;
-}
+  min-height: 95vh;
 
-.Page {
-  min-height: 65vh;
+  @include min-width(768px) {
+    min-height: 84vh;
+  }
 }
