--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -6,15 +6,23 @@
   height: 15rem;
   width: 100%;
 
+  a {
+    @include flex(column, center, center);
+    height: 100%;
+  }
+
   @include min-width(768px) {
     @include flex(row, space-between, center);
   }
 }
 
 .Logo {
-  margin: $spaceS;
-  height: 85%;
-  max-width: 100vw;
+  height: 80%;
+  // max-width: 100vw;
   object-fit: cover;
   object-position: center;
+
+  @include min-width(768px) {
+    margin-left: $spaceM;
+  }
 }
