adds basic info section, changes features section, adds testimonials

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -9,11 +9,11 @@ $primaryLL: #d4f6f4;
 $primaryD: #45a69f;
 $primaryDD: #45a69f;
 
-$secondary: #ffbf8d; //Light Orange
-$secondaryL: #ffd4b3;
-$secondaryLL: #ffe8d7;
-$secondaryD: #d99159;
-$secondaryDD: #b86b31;
+$secondary: #deb887; //Light Orange
+$secondaryL: #ffe3bf;
+$secondaryLL: #fff1df;
+$secondaryD: #b88c53;
+$secondaryDD: #96692f;
 
 $eggshell: lighten(#f0ead6, 8%);
 
