--- a/src/components/Utility/InstagramWidget/InstagramWidget.module.scss
+++ b/src/components/Utility/InstagramWidget/InstagramWidget.module.scss
@@ -11,7 +11,7 @@
 
   width: 100%;
   min-height: 50vh;
-  padding: $spaceL 0;
+  padding: 0 0 $spaceL 0;
   background: white;
   max-width: $contentWidthL;
 }
