--- a/src/components/Features2/Features.module.scss
+++ b/src/components/Features2/Features.module.scss
@@ -20,6 +20,6 @@
   width: 100%;
   max-width: $contentWidthL;
   background: white;
-  padding-bottom: $spaceL;
+  margin-bottom: $spaceL;
   flex-wrap: wrap;
 }
