--- a/src/components/Testimonials/Item/Item.module.scss
+++ b/src/components/Testimonials/Item/Item.module.scss
@@ -3,9 +3,9 @@
 .Item {
   display: inline-block;
   width: 100%;
-  background: $secondaryLL;
+  background: $secondaryL;
   padding: $spaceM;
-  margin: 0 0 $spaceL 0;
+  margin: 0 0 $spaceM 0;
 
   p {
     @include font("SSM");
