--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -22,3 +22,11 @@
     min-height: 84vh;
   }
 }
+
+.Page {
+  min-height: 60vh;
+
+  // @include min-width(768px) {
+  //   min-height: 84vh;
+  // }
+}
