--- a/src/components/Utility/InstagramWidget/InstagramWidget.module.scss
+++ b/src/components/Utility/InstagramWidget/InstagramWidget.module.scss
@@ -14,7 +14,7 @@
   padding: $spaceL 0 $spaceL 0;
   background: white;
   max-width: $contentWidthL;
-  margin-bottom: $spaceL;
+  // margin-bottom: $spaceL;
 }
 
 .UserInfo {
