--- a/src/components/BasicInfo/BasicInfo.module.scss
+++ b/src/components/BasicInfo/BasicInfo.module.scss
@@ -3,8 +3,8 @@
 .BasicInfo {
   @include flex(column, flex-start, center);
   width: 100%;
-  min-height: 60vh;
-  background: $eggshell;
+  min-height: 50vh;
+  // background: $eggshell;
 }
 
 .CardContainer {
@@ -12,7 +12,7 @@
   grid-template-columns: 1fr;
   grid-gap: $spaceM;
   max-width: $contentWidthL;
-  margin: $spaceL $spaceM;
+  margin: 0 $spaceM;
 
   @include min-width(1000px) {
     grid-template-columns: 1fr 1fr;
@@ -23,7 +23,7 @@
 .Right {
   @include flex(column, flex-start, flex-start);
   width: 100%;
-  height: 70rem;
+  // height: 70rem;
   background: white;
   padding: $spaceL $spaceM;
 
@@ -34,23 +34,27 @@
 
   p {
     @include font("S");
+
+    a {
+      color: dodgerblue;
+    }
   }
 
   div {
-    margin-top: auto;
+    margin-top: $spaceM;
   }
 
-  @include min-width(600px) {
-    height: 55rem;
-  }
+  // @include min-width(600px) {
+  //   height: 55rem;
+  // }
 
-  @include min-width(1000px) {
-    height: 65rem;
-  }
+  // @include min-width(1000px) {
+  //   height: 65rem;
+  // }
 
-  @include min-width(1500px) {
-    height: 50rem;
-  }
+  // @include min-width(1500px) {
+  //   height: 50rem;
+  // }
 }
 
 .Left {
