--- a/src/components/Features2/Feature/Feature.module.scss
+++ b/src/components/Features2/Feature/Feature.module.scss
@@ -5,15 +5,17 @@
   margin: $spaceM $spaceS;
   width: 30%;
   min-width: 32rem;
-  height: 65rem;
+  height: 50rem;
 }
 
 .Left {
   width: 100%;
   position: relative;
+  height: 32rem;
 
   .FeatureImage {
-    min-height: 350px;
+    // min-height: 350px;
+    height: 100%;
   }
 
   .Overlay {
@@ -22,26 +24,53 @@
     width: 100%;
     top: 0;
     right: 0;
-    background: rgba($primaryD, 0.5);
+    background: linear-gradient(
+      to bottom left,
+      rgba($tertiaryD, 0),
+      rgba($tertiaryD, 0),
+      rgba($tertiaryD, 0.5)
+    );
+    opacity: 0;
+    transition: 0.5s;
+  }
+
+  .Overlay2 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba($gray5, 0),
+      rgba($gray5, 0),
+      rgba($gray5, 0.5)
+    );
     opacity: 1;
     transition: 0.5s;
   }
 
   .Name {
     @include font("XL");
-    text-shadow: 1px 1px 1rem $gray6;
+    text-shadow: 1px 1px 10rem black;
     letter-spacing: 4px;
     text-align: center;
     color: white;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 5%;
+    bottom: 5%;
+
+    // left: 50%;
+    // top: 50%;
+    // transform: translate(-50%, -50%);
   }
 
   &:hover {
     .Overlay {
-      background: rgba($tertiaryD, 0.5);
+      opacity: 1;
+    }
+    .Overlay2 {
+      opacity: 0;
     }
   }
 }
@@ -54,7 +83,7 @@
   width: 100%;
 
   p {
-    @include font("S");
+    @include font("M");
     padding: 0 $spaceS;
   }
 
