--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -5,6 +5,8 @@
 
   height: 15rem;
   width: 100%;
+  background: linear-gradient(to bottom, rgba(white, 0.7), rgba(white, 0));
+  z-index: 1000;
 
   a {
     @include flex(column, center, center);
