--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -89,10 +89,10 @@ $contentWidthL: 165rem;
 
 //CTA Button
 @mixin cta-button() {
-  background: $tertiary;
+  background: $primary;
   border-radius: 0.2rem;
   border: none;
-  box-shadow: 0px 0.2rem 0px 0px $tertiaryD;
+  box-shadow: 0px 0.2rem 0px 0px $primaryD;
   color: $gray5;
   cursor: pointer;
   padding: 1rem 2rem;
@@ -100,7 +100,7 @@ $contentWidthL: 165rem;
   transition: 0.5s;
 
   &:hover {
-    background: $tertiaryD;
+    background: $primaryD;
   }
 }
 
