--- a/src/components/BasicInfo/BasicInfo.module.scss
+++ b/src/components/BasicInfo/BasicInfo.module.scss
@@ -5,27 +5,28 @@
   width: 100%;
   min-height: 50vh;
   // background: $eggshell;
+  margin-bottom: $spaceM;
 }
 
 .CardContainer {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: $spaceM;
-  max-width: $contentWidthL;
+
   margin: 0 $spaceM;
 
   @include min-width(1000px) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
+    max-width: 80%;
   }
 }
 
 .Left,
 .Right {
   @include flex(column, flex-start, flex-start);
-  width: 100%;
-  // height: 70rem;
+  // width: 100%;
   background: white;
-  padding: $spaceL $spaceM;
+  padding: $spaceM $spaceS;
 
   h2 {
     @include font("M");
@@ -44,17 +45,9 @@
     margin-top: $spaceM;
   }
 
-  // @include min-width(600px) {
-  //   height: 55rem;
-  // }
-
-  // @include min-width(1000px) {
-  //   height: 65rem;
-  // }
-
-  // @include min-width(1500px) {
-  //   height: 50rem;
-  // }
+  @include min-width(1000px) {
+    padding: $spaceL $spaceM;
+  }
 }
 
 .Left {
