builds Fair Info page, re-do mobile menu, fix weird inconsistencies with spacing and padding

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -89,6 +89,7 @@ $contentWidthL: 165rem;
 
 //CTA Button
 @mixin cta-button() {
+  display: block;
   background: $primary;
   border-radius: 0.2rem;
   border: none;
