--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -1,5 +1,6 @@
 @import "../../vars";
 
+//Section Container
 .Testimonials {
   @include flex(column, flex-start, center);
   width: 100%;
@@ -8,6 +9,7 @@
   margin: 0 auto;
 }
 
+//Title Container
 .Container {
   padding: 0 $spaceM 0 $spaceM;
   max-width: $contentWidthL;
@@ -15,25 +17,13 @@
   background: white;
 }
 
+//Items Flex Container
 .Items {
-  @include flex(column, flex-start, flex-start);
+  @include flex(column, flex-start, center);
   width: 100%;
   max-width: 100rem;
+
+  @include min-width(1000px) {
+    @include flex(column, flex-start, flex-start);
+  }
 }
-
-// .Masonry {
-//   max-width: $contentWidthL;
-//   column-gap: $spaceL;
-//   background: white;
-//   column-count: 1;
-//   padding: $spaceL $spaceL 0 $spaceL;
-//   // margin-bottom: $spaceL;
-
-//   @include min-width(768px) {
-//     column-count: 2;
-//   }
-
-//   @include min-width(1024px) {
-//     column-count: 3;
-//   }
-// }
