--- a/src/components/Utility/BannerText/BannerText.module.scss
+++ b/src/components/Utility/BannerText/BannerText.module.scss
@@ -7,7 +7,7 @@
   padding: 0 $spaceS;
   width: 100%;
   max-width: $contentWidth;
-  z-index: 2000;
+  // z-index: 1000;
 
   h1,
   h2 {
@@ -20,8 +20,8 @@
 
   .Left {
     h1 {
-      @include font("XL");
-      margin-bottom: $spaceS;
+      @include font("XXL");
+      margin-top: $spaceXL;
     }
     h2 {
       @include font("M");
@@ -42,76 +42,76 @@
     }
   }
 
-  //Mobile Specific Queries:::
-  @media only screen and (max-width: 767px) and (max-height: 570px) {
-    .Left {
-      h1 {
-        @include font("M");
-        margin-bottom: $spaceS;
-      }
-      h2 {
-        @include font("SM");
-        margin-bottom: $spaceM;
-      }
-    }
-    .Right {
-      h1 {
-        @include font("SSM");
-      }
+  // //Mobile Specific Queries:::
+  // @media only screen and (max-width: 767px) and (max-height: 570px) {
+  //   .Left {
+  //     h1 {
+  //       @include font("M");
+  //       margin-bottom: $spaceS;
+  //     }
+  //     h2 {
+  //       @include font("SM");
+  //       margin-bottom: $spaceM;
+  //     }
+  //   }
+  //   .Right {
+  //     h1 {
+  //       @include font("SSM");
+  //     }
 
-      h2 {
-        @include font("S");
-        margin-bottom: $spaceM;
-      }
-    }
-  }
+  //     h2 {
+  //       @include font("S");
+  //       margin-bottom: $spaceM;
+  //     }
+  //   }
+  // }
 
-  @media only screen and (max-width: 767px) and (max-height: 641px) {
-    .Left {
-      h1 {
-        @include font("M");
-        margin-bottom: $spaceS;
-      }
-      h2 {
-        @include font("SM");
-        margin-bottom: $spaceM;
-      }
-    }
-    .Right {
-      h1 {
-        @include font("M");
-      }
+  // @media only screen and (max-width: 767px) and (max-height: 641px) {
+  //   .Left {
+  //     h1 {
+  //       @include font("M");
+  //       margin-bottom: $spaceS;
+  //     }
+  //     h2 {
+  //       @include font("SM");
+  //       margin-bottom: $spaceM;
+  //     }
+  //   }
+  //   .Right {
+  //     h1 {
+  //       @include font("M");
+  //     }
 
-      h2 {
-        @include font("S");
-        margin-bottom: $spaceM;
-      }
-    }
-  }
+  //     h2 {
+  //       @include font("S");
+  //       margin-bottom: $spaceM;
+  //     }
+  //   }
+  // }
 
-  //Tablet Sizing::::
-  @include min-width(768px) {
-    .Left {
-      h1 {
-        @include font("G");
-        margin-bottom: $spaceM;
-      }
-      h2 {
-        @include font("L");
-        margin-bottom: $spaceL;
-      }
-    }
-    .Right {
-      h1 {
-        @include font("L");
-      }
+  // //Tablet Sizing::::
+  // @include min-width(768px) {
+  //   .Left {
+  //     h1 {
+  //       @include font("G");
+  //       margin-bottom: $spaceM;
+  //     }
+  //     h2 {
+  //       @include font("L");
+  //       margin-bottom: $spaceL;
+  //     }
+  //   }
+  //   .Right {
+  //     h1 {
+  //       @include font("L");
+  //     }
 
-      h2 {
-        @include font("M");
-        margin-bottom: $spaceM;
-      }
-    }
-  }
+  //     h2 {
+  //       @include font("M");
+  //       margin-bottom: $spaceM;
+  //     }
+  //   }
+  // }
 
   @include min-width(1000px) {
     @include flex(row, center, flex-start);
