--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -21,7 +21,8 @@
 .Items {
   @include flex(column, flex-start, center);
   width: 100%;
-  max-width: 100rem;
+  max-width: 80rem;
+  margin: $spaceM 0;
 
   @include min-width(1000px) {
     @include flex(column, flex-start, flex-start);
