--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -93,10 +93,10 @@ $contentWidthL: 165rem;
 //CTA Button
 @mixin cta-button() {
   display: block;
-  background: $primary;
+  background: $primaryL;
   border-radius: 0.2rem;
   border: none;
-  box-shadow: 0px 0.2rem 0px 0px $primaryD;
+  box-shadow: 0px 0.2rem 0px 0px $primary;
   color: $gray5;
   cursor: pointer;
   padding: 1rem 2rem;
@@ -104,7 +104,7 @@ $contentWidthL: 165rem;
   transition: 0.5s;
 
   &:hover {
-    background: $primaryD;
+    background: $primary;
   }
 }
 
