--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -7,6 +7,8 @@
   width: 100%;
   background: linear-gradient(to bottom, rgba(white, 0.7), rgba(white, 0));
   z-index: 1000;
+  position: fixed;
+  background: white;
 
   a {
     @include flex(column, center, center);
