--- a/src/components/Testimonials/Item/Item.module.scss
+++ b/src/components/Testimonials/Item/Item.module.scss
@@ -56,7 +56,7 @@
     @include font("XS");
 
     @include min-width(1000px) {
-      @include font("S");
+      @include font("XS");
     }
   }
 
@@ -69,7 +69,7 @@
   }
 
   @include min-width(1000px) {
-    @include font("L");
+    @include font("M");
   }
 }
 
