--- a/src/components/Utility/InstagramWidgetSmall/InstagramWidgetSmall.module.scss
+++ b/src/components/Utility/InstagramWidgetSmall/InstagramWidgetSmall.module.scss
@@ -4,8 +4,8 @@
   @include flex(column, flex-start, center);
 
   width: 310px;
-  height: 550px;
-
+  // height: 550px;
+  margin-bottom: $spaceM;
   // @include min-width(1000px) {
   //   padding: 0 $spaceM 0 $spaceM;
   // }
