big changes to get involved, about, fair info. attempts to fix insta plugin, adds MailChimp plugin, various smaller style changes

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -4,4 +4,9 @@
   @include flex(column, flex-start, center);
 
   width: 100%;
+
+  @include min-width(1000px) {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
