--- a/src/components/Utility/CopyMDX/CopyMDX.module.scss
+++ b/src/components/Utility/CopyMDX/CopyMDX.module.scss
@@ -5,25 +5,77 @@
   padding: 0 $spaceM;
 
   @include min-width(1000px) {
-    width: 70%;
+    width: 80%;
   }
 
   .HTML {
     @include flex(column, flex-start, flex-start);
+
+    h1,
+    h2,
+    h3,
+    h4,
+    p {
+      text-align: center;
+      width: 100%;
+
+      @include min-width(1000px) {
+        text-align: left;
+      }
+    }
+
+    h1 {
+      @include font("XXL");
+      margin-bottom: $spaceM;
+      margin-top: $spaceM;
+      text-transform: uppercase;
+      letter-spacing: 0.4rem;
+      font-weight: 300;
+
+      @include min-width(1000px) {
+        margin-top: 0;
+      }
+    }
+
     h2 {
       @include font("L");
-      margin-bottom: $spaceS;
+      margin-bottom: $spaceM;
       margin-top: $spaceS;
+      text-transform: uppercase;
+      letter-spacing: 0.4rem;
+      font-weight: 300;
+
+      @include min-width(1000px) {
+        margin-bottom: $spaceS;
+      }
     }
 
     h3 {
       @include font("M");
       margin-bottom: $spaceS;
+      margin-top: $spaceS;
+      text-transform: uppercase;
+      letter-spacing: 0.4rem;
+      font-weight: 300;
     }
 
     p {
       @include font("S");
       margin-bottom: $spaceS;
+    }
+
+    ul {
+      margin-left: $spaceM;
+      max-width: 70rem;
+
+      li {
+        @include font("XS");
+
+        p {
+          @include font("XS");
+          color: lighten($gray4, 20%);
+        }
+      }
     }
 
     span a {
@@ -32,6 +84,16 @@
 
     div {
       @include font("XS");
+    }
+
+    hr {
+      width: 100%;
+      border-top: 0.2rem solid $primaryDD;
+      margin: $spaceM 0;
+    }
+
+    strong {
+      color: $primaryDD;
     }
   }
 }
